--- a/UWP/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
+++ b/UWP/ObjectModelProjection/ObjectModelProjection.vcxproj.filters
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\..\shared\ObjectModel\ACParseException.cpp" />
-    <ClCompile Include="..\..\shared\ObjectModel\ACParser.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCard.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\Container.cpp" />
     <ClCompile Include="..\..\shared\ObjectModel\Enums.cpp" />
@@ -11,10 +9,11 @@
     <ClCompile Include="..\..\shared\ObjectModel\jsoncpp.cpp">
       <Filter>json</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCardParseException.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\ParseUtil.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\Image.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\shared\ObjectModel\ACParseException.h" />
-    <ClInclude Include="..\..\shared\ObjectModel\ACParser.h" />
     <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCard.h" />
     <ClInclude Include="..\..\shared\ObjectModel\Container.h" />
     <ClInclude Include="..\..\shared\ObjectModel\Enums.h" />
@@ -26,6 +25,9 @@
     <ClInclude Include="..\..\shared\ObjectModel\json\json-forwards.h">
       <Filter>json</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCardParseException.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\ParseUtil.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\Image.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
