--- a/android/mobile/src/main/AndroidManifest.xml
+++ b/android/mobile/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.microsoft.adaptivecards.adaptivecardssample">
 
-    <application
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <application>
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -35,5 +38,4 @@
             </intent-filter>
         </service>
     </application>
-
 </manifest>
