--- a/builders/.NET/Adaptive.Schema.Net/Adaptive.Schema.Net.csproj
+++ b/builders/.NET/Adaptive.Schema.Net/Adaptive.Schema.Net.csproj
@@ -57,15 +57,15 @@
     <Compile Include="Actions\SubmitAction.cs" />
     <Compile Include="Actions\ShowCardAction.cs" />
     <Compile Include="Containers\AdaptiveCard.cs" />
-    <Compile Include="Elements\CardElement.cs" />
+    <Compile Include="Elements\CardItem.cs" />
     <Compile Include="Containers\Column.cs" />
-    <Compile Include="Containers\ColumnGroup.cs" />
+    <Compile Include="Containers\ColumnSet.cs" />
     <Compile Include="Containers\Container.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="Containers\FactGroup.cs" />
+    <Compile Include="Containers\FactSet.cs" />
     <Compile Include="Actions\HttpAction.cs" />
     <Compile Include="Elements\Image.cs" />
-    <Compile Include="Containers\ImageGallery.cs" />
+    <Compile Include="Containers\ImageSet.cs" />
     <Compile Include="Elements\Input.cs" />
     <Compile Include="Actions\OpenUrlAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
