XamlTileRenderer:Delay rendering completion until images are fully available
This change creates a RenderCardAsXamlAsync that returns an async
operation
which only completes once all the images have been downloaded and are
ready
to be displayed.

There are a couple of main pieces to this changes:
1) Image loading is now done manually instead of letting
BitmapImage::SetSource do it.  This is
because Xaml delays image loading until the control is being rendered in
the tree.  Since that
will never happen, the ImageLoaded event neve fires it the source is set
this way.
2) I created a common async operation base class which will be reused to
provide the same functionality
for the implementation of the RenderCardAsImageAsync operation.
3) Both the ImageLoadTracker and the XamlBuilder now expose a callback
interface to notify clients
when all images have been loaded.

I also implemented a few bits of the default resource dictionary and the
usage of resource, just to
verify that strategy will work.

--- a/UWP/Renderer/XamlCardRenderer.vcxproj
+++ b/UWP/Renderer/XamlCardRenderer.vcxproj
@@ -81,6 +81,10 @@
       <SubSystem>Console</SubSystem>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <ModuleDefinitionFile>.\dll\AdaptiveCards.XamlCardRenderer.def</ModuleDefinitionFile>
+      <AdditionalDependencies>
+        user32.lib;
+        %(AdditionalDependencies);
+      </AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>mdmerge -partial -i "$(OutDir)$(TargetName).winmd" -o "$(OutDir)Output" -metadata_dir "$(FrameworkSdkDir)UnionMetadata" &amp;&amp; copy /y "$(OutDir)Output\*" "$(OutDir)"</Command>
@@ -101,7 +105,10 @@
     <ClCompile>
       <PreprocessorDefinitions Condition="'$(Configuration)'=='Debug'">_WINRT_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)'=='Release'">_WINRT_DLL;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\shared\ObjectModel;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>
+	..\..\shared\ObjectModel;
+	%(AdditionalIncludeDirectories)
+</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -109,9 +116,17 @@
     <ClInclude Include="lib\AdaptiveContainer.h" />
     <ClInclude Include="lib\AdaptiveImage.h" />
     <ClInclude Include="lib\AdaptiveTextBlock.h" />
+    <ClInclude Include="lib\AsyncOperations.h" />
+    <ClInclude Include="lib\DefaultResourceDictionary.h" />
     <ClInclude Include="lib\ErrorHandling.h" />
+    <ClInclude Include="lib\IImageLoadTrackerListener.h" />
     <ClInclude Include="lib\ImageLoadTracker.h" />
+    <ClInclude Include="lib\ImageRenderResult.h" />
+    <ClInclude Include="lib\IRenderXamlToImageExecutionInstance.h" />
+    <ClInclude Include="lib\IXamlBuilderListener.h" />
     <ClInclude Include="lib\pch.h" />
+    <ClInclude Include="lib\RenderXamlToImageExecutionInstance.h" />
+    <ClInclude Include="lib\RenderXamlToImageTask.h" />
     <ClInclude Include="lib\Util.h" />
     <ClInclude Include="lib\Vector.h" />
     <ClInclude Include="lib\XamlBuilder.h" />
@@ -121,10 +136,15 @@
     <ClCompile Include="lib\AdaptiveImage.cpp" />
     <ClCompile Include="lib\AdaptiveTextBlock.cpp" />
     <ClCompile Include="lib\ImageLoadTracker.cpp" />
+    <ClCompile Include="lib\ImageRenderResult.cpp" />
+    <ClCompile Include="lib\RenderXamlToImageExecutionInstance.cpp" />
+    <ClCompile Include="lib\RenderXamlToImageTask.cpp" />
     <ClCompile Include="lib\Util.cpp" />
     <ClCompile Include="lib\XamlBuilder.cpp" />
     <ClCompile Include="lib\XamlCardRendererComponent.cpp" />
     <ClCompile Include="dll\dll.cpp" />
+    <ClInclude Include="lib\XamlHelpers.h" />
+    <ClInclude Include="lib\XamlStyleKeyGenerators.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.XamlCardRenderer.idl">
