--- a/UWP/Renderer/XamlCardRenderer.vcxproj.filters
+++ b/UWP/Renderer/XamlCardRenderer.vcxproj.filters
@@ -9,6 +9,9 @@
     <ClCompile Include="lib\XamlBuilder.cpp" />
     <ClCompile Include="lib\AdaptiveImage.cpp" />
     <ClCompile Include="lib\ImageLoadTracker.cpp" />
+    <ClCompile Include="lib\ImageRenderResult.cpp" />
+    <ClCompile Include="lib\RenderXamlToImageExecutionInstance.cpp" />
+    <ClCompile Include="lib\RenderXamlToImageTask.cpp" />
     <ClCompile Include="lib\AdaptiveContainer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -22,6 +25,16 @@
     <ClInclude Include="lib\Vector.h" />
     <ClInclude Include="lib\AdaptiveImage.h" />
     <ClInclude Include="lib\ImageLoadTracker.h" />
+    <ClInclude Include="lib\XamlHelpers.h" />
+    <ClInclude Include="lib\ImageRenderResult.h" />
+    <ClInclude Include="lib\RenderXamlToImageExecutionInstance.h" />
+    <ClInclude Include="lib\RenderXamlToImageTask.h" />
+    <ClInclude Include="lib\IRenderXamlToImageExecutionInstance.h" />
+    <ClInclude Include="lib\IImageLoadTrackerListener.h" />
+    <ClInclude Include="lib\IXamlBuilderListener.h" />
+    <ClInclude Include="lib\DefaultResourceDictionary.h" />
+    <ClInclude Include="lib\XamlStyleKeyGenerators.h" />
+    <ClInclude Include="lib\AsyncOperations.h" />
     <ClInclude Include="lib\AdaptiveContainer.h" />
   </ItemGroup>
   <ItemGroup>
