--- a/WpfVisualizer/packages.config
+++ b/WpfVisualizer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AvalonEdit" version="5.0.3" targetFramework="net452" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
 </packages>
