--- a/UWP/Renderer/XamlCardRenderer.vcxproj
+++ b/UWP/Renderer/XamlCardRenderer.vcxproj
@@ -106,9 +106,10 @@
       <PreprocessorDefinitions Condition="'$(Configuration)'=='Debug'">_WINRT_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)'=='Release'">_WINRT_DLL;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>
-	..\..\shared\ObjectModel;
-	%(AdditionalIncludeDirectories)
-</AdditionalIncludeDirectories>
+        ..\..\shared\ObjectModel;
+        ..\..\shared\ObjectModel\json;
+        %(AdditionalIncludeDirectories)
+      </AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -124,7 +125,6 @@
     <ClInclude Include="lib\IImageLoadTrackerListener.h" />
     <ClInclude Include="lib\ImageLoadTracker.h" />
     <ClInclude Include="lib\ImageRenderResult.h" />
-    <ClInclude Include="lib\IRenderXamlToImageExecutionInstance.h" />
     <ClInclude Include="lib\IXamlBuilderListener.h" />
     <ClInclude Include="lib\pch.h" />
     <ClInclude Include="lib\Util.h" />
