--- a/builders/.NET/Adaptive.Net/Adaptive.Net.csproj
+++ b/builders/.NET/Adaptive.Net/Adaptive.Net.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Adaptive</RootNamespace>
-    <AssemblyName>Adaptive.Net</AssemblyName>
+    <AssemblyName>Adaptive.NET</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -72,9 +72,12 @@
     <Compile Include="TypedElementConverter.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Adaptive.NET.nuspec" />
+    <None Include="createpackage.cmd" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="pushpackage.cmd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
