--- a/Renderers/XamlRenderer/packages.config
+++ b/Renderers/XamlRenderer/packages.config
@@ -3,4 +3,5 @@
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net452" />
   <package id="MarkedNet" version="1.0.5.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="ParallelExtensionsExtras" version="1.2.0.0" targetFramework="net45" />
 </packages>
