allow ctrl-shift-b to build both projects

--- a/source/html/.vscode/tasks.json
+++ b/source/html/.vscode/tasks.json
@@ -8,7 +8,7 @@
     "tasks": [
         {
             "showOutput": "always",
-            "taskName": "bundle",
+            "taskName": "build-all",
             "isBuildCommand": true,
             "isBackground": true,
             "problemMatcher": "$tsc-watch"
