--- a/Renderers/XamlRenderer/Adaptive.Renderers.Xaml.csproj
+++ b/Renderers/XamlRenderer/Adaptive.Renderers.Xaml.csproj
@@ -57,10 +57,6 @@
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ParallelExtensionsExtras, Version=1.2.3.0, Culture=neutral, PublicKeyToken=665f4d61f853b5a9, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\ParallelExtensionsExtras.1.2.0.0\lib\net40\ParallelExtensionsExtras.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -188,6 +184,7 @@
     <Compile Include="Elements\CardElement.Xaml.cs" />
     <Compile Include="Elements\TextBlock.Xaml.cs" />
     <Compile Include="RenderContext.cs" />
+    <Compile Include="StaTaskScheduler.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Actions\ActionSubmit.Xaml.cs" />
     <Compile Include="MarkedXamlRenderer.cs" />
