--- a/source/html/visualizer/package.json
+++ b/source/html/visualizer/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "private": true,
   "scripts": {
-    "build": "webpack",
+    "force-update": "npm install adaptive-card-html-renderer -f",
+    "build": "webpack --display-error-details",
     "watch": "tsc -p . -w",
     "bundle": "webpack --watch",
     "start": "http-server ../ -c-1 -o -a localhost",
@@ -16,6 +17,7 @@
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.0",
+    "adaptive-card-html-renderer": "file:../renderer/",
     "ajv-cli": "1.1.1",
     "brace": "^0.9.1",
     "http-server": "0.9.0",
