--- a/source/uwp/ObjectModelTest/ObjectModelTest.vcxproj
+++ b/source/uwp/ObjectModelTest/ObjectModelTest.vcxproj
@@ -91,10 +91,28 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCard.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\AdaptiveCardParseException.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\BaseCardElement.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\Container.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\Enums.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\Image.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\ParseUtil.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\pch.h" />
+    <ClInclude Include="..\..\shared\ObjectModel\TextBlock.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCard.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\AdaptiveCardParseException.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\BaseCardElement.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\Container.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\Enums.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\Image.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\jsoncpp.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\ParseUtil.cpp" />
+    <ClCompile Include="..\..\shared\ObjectModel\TextBlock.cpp" />
     <ClCompile Include="ObjectModelTest.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
@@ -103,11 +121,6 @@
     <None Include="TestJsonFiles\nounicode.json" />
     <None Include="TestJsonFiles\test1.json" />
     <None Include="TestJsonFiles\textblock_noUnicode.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ObjectModel\ObjectModel.vcxproj">
-      <Project>{8f322f44-78b1-46f8-89d2-86b0a2e1b1c5}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
