--- a/source/html/renderer/tsconfig.json
+++ b/source/html/renderer/tsconfig.json
@@ -9,7 +9,8 @@
         "noImplicitAny": false,
         "sourceMap": true,
         "target": "es5",
-        "outDir": "built"
+        "declaration": true,
+        "outDir": "built"        
     },
     "include": [
         "./src/**/*"
