--- a/source/html/visualizer/tsconfig.json
+++ b/source/html/visualizer/tsconfig.json
@@ -8,16 +8,22 @@
         "moduleResolution": "node",
         "sourceMap": true,
         "target": "es5",
+        "allowJs": true,
         "rootDir": "src",
         "outDir": "built",
         "baseUrl": ".",
         "paths": {
-            "adaptive-card-html-renderer/*": [
-                "node_modules/adaptive-card-html-renderer/built/*"
+            "adaptive-cards": [
+                "../renderer/",
+                "../../renderer/"
             ]
         }
     },
     "include": [
-        "./src/**/*"
+        "src/**/*",
+        "src/containers/host-container.ts"
+    ],
+    "exclude": [
+        "src/containers/*"
     ]
 }
