--- a/source/html/visualizer/package.json
+++ b/source/html/visualizer/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "adaptive-card-html-visualizer",
+  "name": "adaptive-cards-visualizer",
   "version": "0.1.0",
-  "description": "adaptive card toolkit html rendering library visualizer",
-  "main": "app.js",
+  "description": "Adaptive Card Visualizer for HTML renderer",
+  "main": "built/app",
   "private": true,
   "scripts": {
-    "force-update": "npm install adaptive-card-html-renderer -f",
-    "build": "webpack --display-error-details",
-    "watch": "tsc -p . -w",
-    "bundle": "webpack --watch",
+    "force-update": "npm install adaptive-cards -f",
+    "build": "webpack",
+    "build-verbose": "webpack --display-error-details",
+    "watch": "webpack --watch",
     "start": "http-server ../ -c-1 -o -a localhost",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,6 @@
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.0",
-    "adaptive-card-html-renderer": "file:../renderer/",
     "ajv-cli": "1.1.1",
     "brace": "^0.9.1",
     "http-server": "0.9.0",
@@ -30,5 +29,8 @@
     "webpack": "^2.2.1"
   },
   "author": "Microsoft",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.1.2"
+  }
 }
