--- a/source/html/visualizer/package.json
+++ b/source/html/visualizer/package.json
@@ -26,7 +26,8 @@
     "tslint": "^4.4.2",
     "typescript": "^2.1.5",
     "vkbeautify": "^0.99.1",
-    "webpack": "^2.3.1"
+    "webpack": "^2.3.1",
+    "adaptive-cards": "0.1.0"
   },
   "author": "Microsoft",
   "license": "MIT",
