--- a/source/html/visualizer/package.json
+++ b/source/html/visualizer/package.json
@@ -2,14 +2,14 @@
   "name": "adaptive-cards-visualizer",
   "version": "0.1.0",
   "description": "Adaptive Card Visualizer for HTML renderer",
-  "main": "built/app",
+  "main": "built/visualizer.js",
   "private": true,
   "scripts": {
     "force-update": "npm install adaptive-cards -f",
     "build": "webpack",
     "build-verbose": "webpack --display-error-details",
     "watch": "webpack --watch",
-    "start": "http-server ../ -c-1 -o -a localhost",
+    "start": "http-server ./dev.html -c-1 -o -a localhost",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -17,7 +17,7 @@
     "@types/markdown-it": "0.0.1",
     "@types/node": "0.0.2",
     "@types/vkbeautify": "^0.99.0",
-    "adaptive-cards": "^0.1.0",
+    "adaptive-cards": "*",
     "ajv-cli": "1.1.1",
     "brace": "^0.9.1",
     "http-server": "0.9.0",
